<resources>
    <string name="app_name">USTH Weather</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature">temperature</string>
    <string name="thursday">Thursday</string>
    <string name="weather_icon">Weather icon</string>
    <string name="monday">Monday</string>
    <string name="usth_weather">USTH Weather</string>
    <string name="settings">Settings</string>
    <string name="reload">Reload</string>
    <string name="Monday">Mon</string>
    <string name="foggy_n24c_30c">Foggy_n24c_30c</string>
    <string name="oggy_24c_30c"><![CDATA[Foggy 24c->30c]]></string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="sunny_30c_37c"><![CDATA[Sunny 30c->37c]]></string>
    <string name="weather_mix_18c_23c"><![CDATA[Weather mix 18c->23c]]></string>
    <string name="rainy_heavy_25c_28c"><![CDATA[Rainy heavy 25c->28c]]></string>
    <string name="heavy_rain_25c_28c"><![CDATA[Heavy rain 25c->28c]]></string>
    <string name="cloudy_snow_7c_2c"><![CDATA[Cloudy snow -7c-> -2c]]></string>
    <string name="thunderstorm_20c_27c"><![CDATA[Thunderstorm 20c->27c]]></string>
    <string name="snowing_5c_2c"><![CDATA[Snowing -5c->2c]]></string>
    <string name="foggy_24c_30c"><![CDATA[Foggy 24c->30c]]></string>
    <string name="hello_world">Hello World</string>
    <string name="_12c_cloudy">12C Cloudy</string>
    <string name="paris">Paris</string>
    <string name="type_of_weather">type of weather</string>
    <string name="setting">Setting</string>
    <string name="city_weather">City weather</string>
    <string name="transparentframe">transparentframe</string>
    <string name="frame">frame</string>
    <string name="search">Search</string>
</resources>