<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vn.edu.usth.weather.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/settings_24px"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_24px"
        android:title="@string/search"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_reload"
        android:title="@string/reload"
        app:showAsAction="ifRoom"
        android:icon="@drawable/reload"
        android:orderInCategory="75"/>


</menu>